--- a/notebooks/webscraping.ipynb
+++ b/notebooks/webscraping.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "14e7b181",
+   "id": "236285b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35e2625",
+   "id": "a4326e29",
    "metadata": {},
    "source": [
     "a. Use the .find method to find the tag containing the first job title (\"Senior Python Developer\"). \n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "78af7e7b",
+   "id": "ec86a615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "f9978993",
+   "id": "293f5c19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "86c4c538",
+   "id": "3c87ca8e",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "1b892abd",
+   "id": "5adba2f0",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "3d4a7f97",
+   "id": "1af1cd39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "63f2d488",
+   "id": "15445346",
    "metadata": {},
    "outputs": [
     {
@@ -4042,7 +4042,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "6cfe627d",
+   "id": "b428ff82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4052,7 +4052,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "621fc012",
+   "id": "62409c20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4062,7 +4062,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "46f94468",
+   "id": "b2b37d35",
    "metadata": {},
    "outputs": [
     {
@@ -4079,7 +4079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fad7484",
+   "id": "27e183bb",
    "metadata": {},
    "source": [
     "b. Now, use what you did for the first title, but extract the job title for all jobs on this page.\n",
@@ -4089,7 +4089,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "68977e46",
+   "id": "be8fd5bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4099,7 +4099,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "ceddd7ca",
+   "id": "b6a6b513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4110,7 +4110,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "c8523681",
+   "id": "80b63cb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4124,7 +4124,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "03ff6fea",
+   "id": "efacc88d",
    "metadata": {},
    "outputs": [
     {
@@ -4141,7 +4141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "290a3baa",
+   "id": "51140645",
    "metadata": {},
    "source": [
     "c.Finally, extract the companies, locations, and posting dates for each job.\n",
@@ -4153,7 +4153,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "03f9d087",
+   "id": "6821fdee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4180,7 +4180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2005dd54",
+   "id": "ceda81a5",
    "metadata": {},
    "source": [
     "d.Take the lists that you have created and combine them into a pandas DataFrame. \n",
@@ -4191,7 +4191,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "d97d965f",
+   "id": "2f17d983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4201,7 +4201,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "88fca4b5",
+   "id": "d708536a",
    "metadata": {},
    "outputs": [
     {
@@ -4298,7 +4298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd80996d",
+   "id": "7d043009",
    "metadata": {},
    "source": [
     "2a.2. Next, add a column that contains the url for the \"Apply\" button. Try this in two ways.   \n",
@@ -4308,7 +4308,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "6c410246",
+   "id": "1cd793ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4318,7 +4318,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "e00257af",
+   "id": "c7561b96",
    "metadata": {},
    "outputs": [
     {
@@ -4336,7 +4336,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "580aa85e",
+   "id": "7667d8cf",
    "metadata": {},
    "outputs": [
     {
@@ -4358,7 +4358,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "857f6c77",
+   "id": "dfe516fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4368,7 +4368,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "86e552c0",
+   "id": "548e75e4",
    "metadata": {},
    "outputs": [
     {
@@ -4439,12 +4439,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1df554b",
+   "metadata": {},
+   "source": [
+    "3. Finally, we want to get the job description text for each job.  \n",
+    "    a.         Using BeautifulSoup, extract the job description paragraph."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "337ac290",
+   "execution_count": 240,
+   "id": "9af24673",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "id": "1a38261d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "id": "574f8ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BS(page.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "42df0ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      " <head>\n",
+      "  <meta charset=\"utf-8\"/>\n",
+      "  <meta content=\"width=device-width, initial-scale=1\" name=\"viewport\"/>\n",
+      "  <title>\n",
+      "   Fake Python\n",
+      "  </title>\n",
+      "  <link href=\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\" rel=\"stylesheet\"/>\n",
+      " </head>\n",
+      " <body>\n",
+      "  <section class=\"section\">\n",
+      "   <div class=\"container mb-5\">\n",
+      "    <h1 class=\"title is-1\">\n",
+      "     Fake Python\n",
+      "    </h1>\n",
+      "    <p class=\"subtitle is-3\">\n",
+      "     Fake Jobs for Your Web Scraping Journey\n",
+      "    </p>\n",
+      "   </div>\n",
+      "   <div class=\"container\">\n",
+      "    <div class=\"columns is-multiline\" id=\"ResultsContainer\">\n",
+      "     <div class=\"box\">\n",
+      "      <h1 class=\"title is-2\">\n",
+      "       Senior Python Developer\n",
+      "      </h1>\n",
+      "      <h2 class=\"subtitle is-4 company\">\n",
+      "       Payne, Roberts and Davis\n",
+      "      </h2>\n",
+      "      <div class=\"content\">\n",
+      "       <p>\n",
+      "        Professional asset web application environmentally friendly detail-oriented asset. Coordinate educational dashboard agile employ growth opportunity. Company programs CSS explore role. Html educational grit web application. Oversea SCRUM talented support. Web Application fast-growing communities inclusive programs job CSS. Css discussions growth opportunity explore open-minded oversee. Css Python environmentally friendly collaborate inclusive role. Django no experience oversee dashboard environmentally friendly willing to learn programs. Programs open-minded programs asset.\n",
+      "       </p>\n",
+      "       <p id=\"location\">\n",
+      "        <strong>\n",
+      "         Location:\n",
+      "        </strong>\n",
+      "        Stewartbury, AA\n",
+      "       </p>\n",
+      "       <p id=\"date\">\n",
+      "        <strong>\n",
+      "         Posted:\n",
+      "        </strong>\n",
+      "        2021-04-08\n",
+      "       </p>\n",
+      "      </div>\n",
+      "     </div>\n",
+      "    </div>\n",
+      "   </div>\n",
+      "  </section>\n",
+      " </body>\n",
+      "</html>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "6f64f123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job_description = soup.find_all(\"p\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "32b0a9b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<p class=\"subtitle is-3\">\n",
+      "        Fake Jobs for Your Web Scraping Journey\n",
+      "      </p>, <p>Professional asset web application environmentally friendly detail-oriented asset. Coordinate educational dashboard agile employ growth opportunity. Company programs CSS explore role. Html educational grit web application. Oversea SCRUM talented support. Web Application fast-growing communities inclusive programs job CSS. Css discussions growth opportunity explore open-minded oversee. Css Python environmentally friendly collaborate inclusive role. Django no experience oversee dashboard environmentally friendly willing to learn programs. Programs open-minded programs asset.</p>, <p id=\"location\"><strong>Location:</strong> Stewartbury, AA</p>, <p id=\"date\"><strong>Posted:</strong> 2021-04-08</p>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(job_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1eb3352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def getdata(url):  \n",
+    "    r = requests.get(url)  \n",
+    "    return r.text  \n",
+    "  \n",
+    "htmldata = getdata(\"https://realpython.github.io/fake-jobs/jobs/senior-python-developer-0.html\")  \n",
+    "soup = BeautifulSoup(htmldata, 'html.parser')  \n",
+    "data = ''  \n",
+    "for data in soup.find_all(\"p\"):  \n",
+    "    print(data.get_text())  "
+   ]
   }
  ],
  "metadata": {
